--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<!-- <li><a href="#" class="button special">Activate</a></li> -->
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -92,7 +92,7 @@ layout: landing
 						</div>
 					</section>
 
-				<!-- CTA -->
+				<!-- CTA
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
@@ -104,4 +104,4 @@ layout: landing
 								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section>-->
