--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/helmet.gif" alt="" /></div><div class="content">
 								<h2>Vietnam War Helmet<br />
-								3D Model/h2>
+								3D Model</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
