--- a/index.html
+++ b/index.html
@@ -40,13 +40,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-
-<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-    <a href="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Hand</a>
-    by <a href="https://sketchfab.com/edijivkov?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">edijivkov</a>
-    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-</p>
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="640" height="480" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 </div></div><div class="content">
 								<h2>Handcuffs<br />
 								3D Model</h2>
