--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: landing
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
 							<div class="image"><img src="images/helmet.gif" alt="" /></div><div class="content">
 								<h2>Vietnam War Helmet<br />
@@ -40,7 +40,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="640" height="480" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="900" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 </div></div><div class="content">
 								<h2>Handcuffs<br />
 								3D Model</h2>
