--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ layout: landing
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="900" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
-</div></div><div class="content">
+							<div class="image"><div class="sketchfab-embed-wrapper"><iframe width="900" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_related=0" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><div class="content">
 								<h2>Handcuffs<br />
 								3D Model</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
