changed to rgba

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: landing
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special" style="background-color:#FFF">
+					<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 						<div class="inner">
 							<header class="major">
 								<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
