--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: landing
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>{{ site.title }}</h2>
-							<p>{{ site.description | markdownify }}</p>
+							<h2 style="font-size:3em;">{{ site.title }}</h2>
+							<p style="font-family:'dosis' !important; margin-top:-70px; font-size:2.7em;">{{ site.description | markdownify }}</p>
 							<ul class="actions">
 								<!-- <li><a href="#" class="button special">Activate</a></li> -->
 							</ul>
