--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: landing
 					<section id="banner">
 						<div class="inner">
 							<h2 style="font-size:3em;">{{ site.title }}</h2>
-							<p style="font-family:'dosis' !important; margin-top:-70px; font-size:2.7em !important;">Portfolio</p>
+							<p style="font-family:'dosis' !important; font-size:2.7em !important;">Portfolio</p>
 							<ul class="actions">
 								<!-- <li><a href="#" class="button special">Activate</a></li> -->
 							</ul>
