fixed lamp section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@ layout: landing
 
 
 						<section class="spotlight">
-							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="900" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div><div class="content">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="900" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+							</div></div>
+
+							<div class="content">
 								<h2>Desk Lamp<br />
 								3D Model</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
