--- a/index.html
+++ b/index.html
@@ -1,142 +1,112 @@
---- layout: landing ---
-<!-- Banner -->
-<section id="banner">
-	<div class="inner">
-		<h2 style="font-size:2.4em;">{{ site.title }}</h2>
-		<p style="font-family:'dosis' !important; font-size:2em !important;">Portfolio</p>
-		<ul class="actions">
-			<!-- <li><a href="#" class="button special">Activate</a></li> -->
-		</ul>
-	</div>
-	<a href="#one" class="more scrolly">Learn More</a>
-</section>
+---
+layout: landing
+---
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2 style="font-size:2.4em;">{{ site.title }}</h2>
+							<p style="font-family:'dosis' !important; font-size:2em !important;">Portfolio</p>
+							<ul class="actions">
+								<!-- <li><a href="#" class="button special">Activate</a></li> -->
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
 
-<!-- One -->
-<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
-	<div class="inner">
-		<header class="major">
-			<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
+				<!-- One -->
+					<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+						<div class="inner">
+							<header class="major">
+								<h2 style="color:#333;">Arcu aliquet vel lobortis ata nisl<br />
 								eget augue amet aliquet nisl cep donec</h2>
-			<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-		</header>
-		<!-- <ul class="icons major">
+								<p style="color:#333;">Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<!-- <ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul> -->
-	</div>
-</section>
+						</div>
+					</section>
 
-<!-- Two -->
-<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
-
-<!-- Helmet -->
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="900" height="600" src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
-		<div class="content">
-			<h2>Vietnam War Helmet<br />
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
+						<section class="spotlight">
+							<div class="image"><img src="images/helmet.gif" alt="" /></div><div class="content">
+								<h2>Vietnam War Helmet<br />
 								3D Model</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
 
-<!-- Handcuffs -->
 
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="900" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe></div>
-		</div>
 
-		<div class="content">
-			<h2>Handcuffs<br />
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="900" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div>
+</div>
+
+<div class="content">
+								<h2>Handcuffs<br />
 								3D Model</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
 
-<!-- Desk Lamp -->
 
-	<section class="spotlight">
-		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="900" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
-				    webkitallowfullscreen="true" onmousewheel=""></iframe>
-			</div>
-		</div>
 
-		<div class="content">
-			<h2>Desk Lamp<br />
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="900" height="600" src="https://sketchfab.com/models/d2041cbd4db74eacb269bcea305ba40d/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+							</div></div>
+
+							<div class="content">
+								<h2>Desk Lamp<br />
 								3D Model</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+					</section>
 
-<!-- Helmet -->
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Accumsan mus tortor nunc aliquet</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-paper-plane-o">
+									<h3>Arcu accumsan</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-laptop">
+									<h3>Ac Augue Eget</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Mus Scelerisque</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-headphones">
+									<h3>Mauris Imperdiet</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-heart-o">
+									<h3>Aenean Primis</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-flag-o">
+									<h3>Tortor Ut</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+							</ul>
+						</div>
+					</section>
 
-	<section class="spotlight">
-		<div class="image"><img src="images/guitar.png" alt=""></div>
-		<div class="content">
-			<h2>Guitar<br />
-								CAD Model</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</div>
-	</section>
-
-	<!-- Bike -->
-
-		<section class="spotlight">
-			<div class="image"><img src="bikeblack.png" alt=""></div>
-
-			<div class="content">
-				<h2>Bicycle<br />
-									CAD Model</h2>
-				<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-			</div>
-		</section>
-
-</section>
-
-<!-- Three -->
-<section id="three" class="wrapper style3 special">
-	<div class="inner">
-		<header class="major">
-			<h2>Accumsan mus tortor nunc aliquet</h2>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br /> fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-		</header>
-		<ul class="features">
-			<li class="icon fa-paper-plane-o">
-				<h3>Arcu accumsan</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-laptop">
-				<h3>Ac Augue Eget</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-code">
-				<h3>Mus Scelerisque</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-headphones">
-				<h3>Mauris Imperdiet</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-heart-o">
-				<h3>Aenean Primis</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-			<li class="icon fa-flag-o">
-				<h3>Tortor Ut</h3>
-				<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-			</li>
-		</ul>
-	</div>
-</section>
-
-<!-- CTA
+				<!-- CTA
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
