--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
-							<div class="image"><img src="images/helmet.gif" alt="" /></div><div class="content">
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="900" height="600" src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+						</div></div><div class="content">
 								<h2>Vietnam War Helmet<br />
 								3D Model</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
