--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/bikeblack.png" alt=""></div>
+</div>
+
+<div class="content">
+								<h2>Bicycle<br />
+								CAD Model</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
 					</section>
 
 				<!-- Three -->
