added new projects

--- a/index.html
+++ b/index.html
@@ -81,7 +81,69 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/guitar.png" alt=""></div></div>
+
+							<div class="content">
+								<h2>Guitar<br />
+								CAD Model</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
+</div>
+
+<div class="content">
+								<h2>2016 Graduation Poster<br />
+								Graphic Design</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/vice.jpg" alt=""></div></div>
+
+							<div class="content">
+								<h2>Vice Poster<br />
+								Graphic Design</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
+</div>
+
+<div class="content">
+								<h2>Neon Poster<br />
+								Graphic Design</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
+
+							<div class="content">
+								<h2>Witcher Poster<br />
+								Graphic Design</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+
 					</section>
+
+
 
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
