--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@ layout: landing
 							</div>
 						</section>
 
+						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+							<div class="inner">
+								<header class="major">
+									<h1 style="color:#333;">CAD Models</h1>
+								</header>
+							</div>
+						</section>
+
 
 						<section class="spotlight">
 							<div class="image">
@@ -76,8 +84,7 @@ layout: landing
 </div>
 
 <div class="content">
-								<h2>Bicycle<br />
-								CAD Model</h2>
+								<h2>Bicycle</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -88,17 +95,24 @@ layout: landing
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/guitar.png" alt=""></div></div>
 
 							<div class="content">
-								<h2>Guitar<br />
-								CAD Model</h2>
+								<h2>Guitar</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+
+						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+							<div class="inner">
+								<header class="major">
+									<h1 style="color:#333;">Graphic Design</h1>
+								</header>
+							</div>
+						</section>
+
 
 						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
 </div>
-
 <div class="content">
 								<h2>2016 Graduation Poster<br />
 								Graphic Design</h2>
