added new sections and materials

--- a/index.html
+++ b/index.html
@@ -30,13 +30,21 @@ layout: landing
 						</div>
 					</section>
 
+
+					<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+						<div class="inner">
+							<header class="major">
+								<h1 style="color:#333;">3D Models</h1>
+							</header>
+						</div>
+					</section>
+
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
 							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 						</div></div><div class="content">
-								<h2>Vietnam War Helmet<br />
-								3D Model</h2>
+								<h2>Vietnam War Helmet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -49,8 +57,7 @@ layout: landing
 </div>
 
 <div class="content">
-								<h2>Handcuffs<br />
-								3D Model</h2>
+								<h2>Handcuffs</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -63,8 +70,7 @@ layout: landing
 							</div></div>
 
 							<div class="content">
-								<h2>Desk Lamp<br />
-								3D Model</h2>
+								<h2>Desk Lamp</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -114,8 +120,7 @@ layout: landing
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
 </div>
 <div class="content">
-								<h2>2016 Graduation Poster<br />
-								Graphic Design</h2>
+								<h2>2016 Graduation Poster</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -125,8 +130,7 @@ layout: landing
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/vice.jpg" alt=""></div></div>
 
 							<div class="content">
-								<h2>Vice Poster<br />
-								Graphic Design</h2>
+								<h2>Vice Poster</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -137,8 +141,7 @@ layout: landing
 </div>
 
 <div class="content">
-								<h2>Neon Poster<br />
-								Graphic Design</h2>
+								<h2>Neon Poster</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
@@ -148,8 +151,48 @@ layout: landing
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
 
 							<div class="content">
-								<h2>Witcher Poster<br />
-								Graphic Design</h2>
+								<h2>Witcher Poster</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
+</div>
+
+<div class="content">
+								<h2>Black Waves Poster</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+
+						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+							<div class="inner">
+								<header class="major">
+									<h1 style="color:#333;">Web Design</h1>
+								</header>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
+</div>
+
+<div class="content">
+								<h2>Pako Commerce</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div></div>
+
+							<div class="content">
+								<h2>Techsmart</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
