--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight">
+						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.78);">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
 
@@ -156,7 +156,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight">
+						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.83);">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
 </div>
@@ -176,7 +176,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight">
+						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.87);">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
 </div>
@@ -187,7 +187,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight">
+						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.92);">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div></div>
 
