added new projects

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ layout: landing
 							</div>
 						</section>
 
+						<section class="spotlight">
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/7cc067ce425c454fb06383f980017232/embed?autostart=1&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+						</div></div><div class="content">
+								<h2>Computer Monitors</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
 						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 							<div class="inner">
 								<header class="major">
