--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight">
+						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.74);">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
 </div>
