--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.74);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
 </div>
@@ -154,7 +154,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.78);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
 
@@ -164,7 +164,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.83);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
 </div>
@@ -176,7 +176,7 @@ layout: landing
 						</section>
 
 
-						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+						<section id="one" class="wrapper style1 special">
 							<div class="inner">
 								<header class="major">
 									<h1 style="color:#333;">Web Design</h1>
@@ -184,7 +184,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.87);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
 </div>
@@ -195,7 +195,7 @@ layout: landing
 							</div>
 						</section>
 
-						<section class="spotlight" style="background-color: rgba(0, 0, 0, 0.92);">
+						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div></div>
 
