--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 
 
-<section id="one 3d" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 	<div class="inner">
 		<header class="major">
 			<h1 style="color:#333;">3D Models</h1>
@@ -98,12 +98,12 @@
 			</div>
 		</div>
 		<div class="content">
-			<h2>Saw</h2>
+			<h2>Saw	</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
 
-	<section id="one cad" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+	<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 		<div class="inner">
 			<header class="major">
 				<h1 style="color:#333;">CAD Models</h1>
@@ -135,7 +135,7 @@
 		</div>
 	</section>
 
-	<section id="one gd" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
+	<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 		<div class="inner">
 			<header class="major">
 				<h1 style="color:#333;">Graphic Design</h1>
@@ -199,7 +199,7 @@
 	</section>
 
 
-	<section id="one wd" class="wrapper style1 special">
+	<section id="one" class="wrapper style1 special">
 		<div class="inner">
 			<header class="major">
 				<h1 style="color:#333;">Web Design</h1>
