--- a/index.html
+++ b/index.html
@@ -49,20 +49,13 @@ layout: landing
 							</div>
 						</section>
 
-
-
 						<section class="spotlight">
-							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe></div>
-</div>
-
-<div class="content">
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/d6e3f6d2eb0a408383051760c600bc33/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+						</div></div><div class="content">
 								<h2>Handcuffs</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
-
-
 
 						<section class="spotlight">
 							<div class="image">
