--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ layout: landing
 
 						<section class="spotlight">
 							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
 </div>
 <div class="content">
 								<h2>2016 Graduation Poster</h2>
@@ -157,7 +157,7 @@ layout: landing
 
 						<section class="spotlight">
 							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/neon.jpg" alt=""></div>
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/neon.jpg" alt=""></div>
 </div>
 
 <div class="content">
@@ -168,7 +168,7 @@ layout: landing
 
 						<section class="spotlight">
 							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/witcher.jpg" alt=""></div></div>
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/witcher.jpg" alt=""></div></div>
 
 							<div class="content">
 								<h2>Witcher Poster</h2>
@@ -178,7 +178,7 @@ layout: landing
 
 						<section class="spotlight">
 							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/beachbl2.jpg" alt=""></div>
+								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/beachbl2.jpg" alt=""></div>
 </div>
 
 <div class="content">
@@ -209,7 +209,7 @@ layout: landing
 
 						<section class="spotlight">
 							<div class="image">
-								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/tech2.jpg" alt=""></div></div>
+								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/tech2.jpg" alt=""></div></div>
 
 							<div class="content">
 								<h2>Techsmart</h2>
