--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ layout: landing
 						</section>
 
 
-						<section id="one" class="wrapper style1 special">
+						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 							<div class="inner">
 								<header class="major">
 									<h1 style="color:#333;">Web Design</h1>
