--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: landing
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
-							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/51cffe77580a4e4aa4fb860fdf2efd5b/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 						</div></div><div class="content">
 								<h2>Vietnam War Helmet</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
