--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+					</section>
 
 						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 							<div class="inner">
@@ -103,7 +104,7 @@ layout: landing
 							</div>
 						</section>
 
-
+					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/bikeblack.png" alt=""></div>
@@ -125,6 +126,7 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+					</section>
 
 						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
 							<div class="inner">
@@ -134,7 +136,7 @@ layout: landing
 							</div>
 						</section>
 
-
+					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/Eddie-Graduation2016.jpg" alt=""></div>
@@ -186,6 +188,7 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+					</section>
 
 
 						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
@@ -196,6 +199,7 @@ layout: landing
 							</div>
 						</section>
 
+					<section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 						<section class="spotlight">
 							<div class="image">
 								<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/pako.jpg" alt=""></div>
