added new models

--- a/index.html
+++ b/index.html
@@ -94,6 +94,25 @@ layout: landing
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
+
+						<section class="spotlight">
+							<div class="image">
+								<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/ee95b3c1d69140a2971822b78785865e/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+							</div></div>
+
+							<div class="content">
+								<h2>Table</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+
+						<section class="spotlight">
+							<div class="image"><div class="sketchfab-embed-wrapper" style="float:right;"><iframe width="700" height="600" src="https://sketchfab.com/models/db4ff490a8e6423ba994306c893984d3/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+						</div></div><div class="content">
+								<h2>Glock-18 Pistol</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
 					</section>
 
 						<section id="one" class="wrapper style1 special" style="background-color:rgba(255, 255, 255, 0.65)">
