--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: landing
 		<div class="content">
 			<h2>Vietnam War Helmet</h2>
 			<p>A 3D model of the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer.</p>
-		</br><p>Materials</p></br>
+		</br><h3>Materials</h3>
 			<a href="images/Helmet-(1).jpg"><img src="images/Helmet-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(2).jpg"><img src="images/Helmet-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(3).jpg"><img src="images/Helmet-(3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
