added new textures and references

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Vietnam War Helmet</h2>
-			<p>A 3D model of the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer.</p>
+			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer – little metal trinkets, a card, a flip lighter and a couple of 7.62 Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Materials</h3>
 			<a href="images/Helmet-(1).jpg"><img src="images/Helmet-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Helmet-(2).jpg"><img src="images/Helmet-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -64,7 +64,9 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Handcuffs</h2>
-			<p>The all-known police handcuffs used in numerous movies and shows.</p>
+			<p>The all-known police handcuffs used in numerous movies and shows.</br>Tools: Model - 3Ds Max.</p>
+		</br><h3>Reference</h3>
+			<a href="images/cuffs_ref.jpg"><img src="images/cuffs_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -77,7 +79,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Desk Lamp</h2>
-			<p></p>
+			<p>A classic, rustic 20th century desk lamp with a photorealistic light bulb. </br>Tools: Model - 3Ds Max.</p>
 		</div>
 	</section>
 
@@ -103,6 +105,12 @@ layout: landing
 		<div class="content">
 			<h2>Saw</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Reference</h3>
+			<a href="images/saw_ref.jpg"><img src="images/saw_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Saw-(2).jpg"><img src="images/Saw-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Saw-(3).jpg"><img src="images/Saw-(3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Saw-(4).jpg"><img src="images/Saw-(4).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -115,6 +123,16 @@ layout: landing
 		<div class="content">
 			<h2>Lego Pilot</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Reference and Textures</h3>
+			<a href="images/Lego (1).png"><img src="images/Lego (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Lego (2).png"><img src="images/Lego (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(1).jpg"><img src="images/lego_ref(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(2).jpg"><img src="images/lego_ref(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(3).jpg"><img src="images/lego_ref(3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(4).jpg"><img src="images/lego_ref(4).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(5).jpg"><img src="images/lego_ref(5).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(6).jpg"><img src="images/lego_ref(6).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(7).jpg"><img src="images/lego_ref(7).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -128,6 +146,11 @@ layout: landing
 		<div class="content">
 			<h2>Table</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Textures</h3>
+			<a href="images/Table (1).png"><img src="images/Table (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Table (2).png"><img src="images/Table (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Table (3).png"><img src="images/Table (3).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/Table (4).png"><img src="images/Table (4).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -138,8 +161,12 @@ layout: landing
 			</div>
 		</div>
 		<div class="content">
-			<h2>Glock-18 Pistol</h2>
+			<h2>Glock-17 Pistol</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Reference and Textures</h3>
+			<a href="images/glock.jpg"><img src="images/glock.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/glock_ref1.jpg"><img src="images/glock_ref1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/glock_ref2.jpg"><img src="images/glock_ref2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 </section>
