added new saw materials

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: landing
 			<h2>Saw</h2>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</br><h3>Reference</h3>
-			<a href="images/saw_ref.jpg"><img src="images/saw_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/saw_ref.png"><img src="images/saw_ref.png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(2).jpg"><img src="images/Saw-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(3).jpg"><img src="images/Saw-(3).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
