fixed broken links

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ layout: landing
 			<a href="images/lego_ref(4).jpg"><img src="images/lego_ref(4).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/lego_ref(5).jpg"><img src="images/lego_ref(5).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/lego_ref(6).jpg"><img src="images/lego_ref(6).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
-			<a href="images/lego_ref(7).jpg"><img src="images/lego_ref(7).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/lego_ref(7).png"><img src="images/lego_ref(7).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
