--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ layout: landing
 <section id="two" class="wrapper alt style2" style="background-color:rgba(0, 0, 0, 0.5);">
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/bikeblack.png" alt=""></div>
+			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/bikeblack.png" alt=""></div>
 		</div>
 
 		<div class="content">
@@ -194,7 +194,7 @@ layout: landing
 
 	<section class="spotlight">
 		<div class="image">
-			<div class="sketchfab-embed-wrapper" style="float:left;"><img src="images/guitar.png" alt=""></div>
+			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/guitar.png" alt=""></div>
 		</div>
 
 		<div class="content">
