added new projects and years

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Vietnam War Helmet</h2>
+			<h4>2015</h4>
 			<p>A 3D model of a helmet based on the M1 helmet - a combat helmet that was used by the United States military from World War II until 1985. The helmet has added personal touches of it's wearer – little metal trinkets, a card, a flip lighter and a couple of 7.62 Rifle Rounds. The camo pattern used is the infamous Mitchell pattern, which was used heavily during The Vietnam War era.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Materials</h3>
 			<a href="images/Helmet-(1).jpg"><img src="images/Helmet-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -64,6 +65,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Handcuffs</h2>
+			<h4>2015</h4>
 			<p>The all-known police handcuffs used in numerous movies and shows.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference</h3>
 			<a href="images/cuffs_ref.jpg"><img src="images/cuffs_ref.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -79,6 +81,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Desk Lamp</h2>
+			<h4>2015</h4>
 			<p>A classic, rustic 20th century desk lamp with a photorealistic light bulb. </br>Tools: Model - 3Ds Max.</p>
 		</div>
 	</section>
@@ -91,6 +94,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Computer Monitors</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -104,8 +108,9 @@ layout: landing
 
 		<div class="content">
 			<h2>Saw</h2>
+			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-		</br><h3>Reference</h3>
+		</br><h3>Reference and Textures</h3>
 			<a href="images/saw_ref.png"><img src="images/saw_ref.png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(2).jpg"><img src="images/Saw-(2).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -122,6 +127,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Lego Pilot</h2>
+			<h4>2017</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/Lego (1).png"><img src="images/Lego (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -145,6 +151,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Table</h2>
+			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</br><h3>Textures</h3>
 			<a href="images/Table (1).png"><img src="images/Table (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -162,11 +169,27 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>Glock-17 Pistol</h2>
+			<h4>2017</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/glock.jpg"><img src="images/glock.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref1.jpg"><img src="images/glock_ref1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref2.jpg"><img src="images/glock_ref2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+		</div>
+	</section>
+
+	<section class="spotlight">
+		<div class="image">
+			<div class="sketchfab-embed-wrapper" style="float:left;"><iframe width="700" height="600" src="https://sketchfab.com/models/f385ed0ebb8c45f38ae2310b17c40d5b/embed?autostart=0&amp;preload=1&amp;transparent=1&amp;ui_controls=0&amp;ui_infos=0&amp;ui_related=0" frameborder="0" allowvr="" allowfullscreen="" mozallowfullscreen="true"
+						webkitallowfullscreen="true" onmousewheel=""></iframe>
+			</div>
+		</div>
+		<div class="content">
+			<h2>Shark</h2>
+			<h4>2016</h4>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Reference and Textures</h3>
+			<a href="images/shark.jpg"><img src="images/shark.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 </section>
@@ -186,7 +209,8 @@ layout: landing
 		</div>
 
 		<div class="content">
-			<h2>Bicycle</h2>
+			<h2>Bicycle Frame</h2>
+			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -199,6 +223,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Guitar</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -219,6 +244,7 @@ layout: landing
 		</div>
 		<div class="content">
 			<h2>2016 Graduation Poster</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -230,7 +256,12 @@ layout: landing
 
 		<div class="content">
 			<h2>Vice Poster</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>References and Inspiration</h3>
+			<a href="images/vice1.jpg"><img src="images/vice1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/vice2.jpg"><img src="images/vice2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/vice3.jpg"><img src="images/vice3.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 
@@ -241,6 +272,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Neon Poster</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -252,6 +284,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Witcher Poster</h2>
+			<h4>2014</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -263,6 +296,21 @@ layout: landing
 
 		<div class="content">
 			<h2>Black Waves Poster</h2>
+			<h4>2015</h4>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+		</br><h3>Inspiration</h3>
+			<a href="images/waves.jpg"><img src="images/waves.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+		</div>
+	</section>
+
+	<section class="spotlight">
+		<div class="image">
+			<div class="sketchfab-embed-wrapper" style="float:right;"><img src="images/peak (1).jpg" alt=""></div>
+		</div>
+
+		<div class="content">
+			<h2>Gestalt logo “Peak”</h2>
+			<h4>2015</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -285,6 +333,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Pako Commerce</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
@@ -296,6 +345,7 @@ layout: landing
 
 		<div class="content">
 			<h2>Techsmart</h2>
+			<h4>2016</h4>
 			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 		</div>
 	</section>
