added tools used

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ layout: landing
 		<div class="content">
 			<h2>Computer Monitors</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
 		</div>
 	</section>
 
@@ -109,7 +109,7 @@ layout: landing
 		<div class="content">
 			<h2>Saw</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.<br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/saw_ref.png"><img src="images/saw_ref.png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Saw-(1).jpg"><img src="images/Saw-(1).jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -128,7 +128,7 @@ layout: landing
 		<div class="content">
 			<h2>Lego Pilot</h2>
 			<h4>2017</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Illustrator.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/Lego (1).png"><img src="images/Lego (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Lego (2).png"><img src="images/Lego (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -152,7 +152,7 @@ layout: landing
 		<div class="content">
 			<h2>Table</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Textures</h3>
 			<a href="images/Table (1).png"><img src="images/Table (1).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/Table (2).png"><img src="images/Table (2).png" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -170,7 +170,7 @@ layout: landing
 		<div class="content">
 			<h2>Glock-17 Pistol</h2>
 			<h4>2017</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/glock.jpg"><img src="images/glock.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 			<a href="images/glock_ref1.jpg"><img src="images/glock_ref1.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
@@ -187,9 +187,10 @@ layout: landing
 		<div class="content">
 			<h2>Shark</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - 3Ds Max, Textures - Adobe Photoshop.</p>
 		</br><h3>Reference and Textures</h3>
 			<a href="images/shark.jpg"><img src="images/shark.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
+			<a href="images/shark_2.jpg"><img src="images/shark_2.jpg" alt="Texture" style="width:42px;height:42px;border:0;"></a>
 		</div>
 	</section>
 </section>
@@ -211,7 +212,7 @@ layout: landing
 		<div class="content">
 			<h2>Bicycle Frame</h2>
 			<h4>2015</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Drawing - AutoCAD.</p>
 		</div>
 	</section>
 
@@ -224,7 +225,7 @@ layout: landing
 		<div class="content">
 			<h2>Guitar</h2>
 			<h4>2016</h4>
-			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+			<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</br>Tools: Model - AutoCAD.</p>
 		</div>
 	</section>
 </section>
